# gsd-tandem

./: .gitignore  .mcp.json  .npmignore  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json
tools/gsd-review-broker/: pyproject.toml  reviewer_prompt.md  throughput_test.py
tools/gsd-review-broker/.planning/: codex_review_broker.sqlite3
tools/gsd-review-broker/dashboard/: astro.config.mjs  package-lock.json  package.json
tools/gsd-review-broker/dashboard/src/components/: ConnectionStatus.astro  LogViewer.astro  OverviewReviewers.astro  OverviewStats.astro  OverviewStatus.astro  Sidebar.astro  ThemeToggle.astro
tools/gsd-review-broker/dashboard/src/layouts/: Layout.astro
tools/gsd-review-broker/dashboard/src/pages/: index.astro
tools/gsd-review-broker/dashboard/src/scripts/: logs.ts  overview.ts  sse.ts  (+2 more)
tools/gsd-review-broker/src/gsd_review_broker/: __init__.py  audit.py  config_schema.py  dashboard.py  db.py  diff_utils.py  models.py  notifications.py  platform_spawn.py  pool.py  priority.py  server.py  state_machine.py  tools.py
tools/gsd-review-broker/tests/: conftest.py  test_activity_feed.py  test_audit.py  test_category.py  test_config_schema.py  test_counter_patch.py  test_dashboard.py  test_db_schema.py  test_diff_utils.py  test_e2e_workflow.py  test_messages.py  test_notifications.py  test_platform_spawn.py  test_polling.py  test_pool.py  test_priority.py  test_proposals.py  test_queue_wait.py  test_reclaim.py  test_scaling.py  test_server_logging.py  test_skip_validation.py  test_state_machine.py  test_stats.py  test_tools.py
(+162 files in other folders)
