[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gsd-review-broker"
version = "0.1.0"
description = "MCP review broker for GSD tandem pairing"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.2,<4",
    "aiosqlite>=0.22,<1",
    "unidiff>=0.7.5,<1",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15",
]

[project.scripts]
gsd-review-broker = "gsd_review_broker.server:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
